[package]
name = "satsuki"
description = "Simple binary comparison helper tool for Touhou 06"
authors = ["Mary <mary@mary.zone>"]
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.10"
capstone = "0.11.0"
object = { version = "0.31.1", features = ["pe"] }
pdb = "0.8.0"
similar = "2.2.1"

